--- a/DockerFile
+++ b/DockerFile
@@ -1,8 +1,2 @@
-FROM centos
-RUN cd /etc/yum.repos.d/
-RUN sed -i 's/mirrorlist/#mirrorlist/g' /etc/yum.repos.d/CentOS-*
-RUN sed -i 's|#baseurl=http://mirror.centos.org|baseurl=http://vault.centos.org|g' /etc/yum.repos.d/CentOS-*
-RUN yum -y install httpd
-COPY ./src /var/www/html/
-CMD /usr/sbin/httpd -DFOREGROUND
-EXPOSE 80
+FROM httpd:2.4
+COPY ./src/ /usr/local/apache2/htdocs/
